Bug 268924 - Versioning fails to save a new version as a JPEG2000
Summary: Versioning fails to save a new version as a JPEG2000
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Versioning (other bugs)
Version First Reported In: 2.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-20 00:52 UTC by JarD
Modified: 2022-02-01 22:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JarD 2011-03-20 00:52:41 UTC
Version:           2.0.0 (using KDE 4.6.1) 
OS:                Linux

The editor fails to save the changed file as a JPEG2000. Exporting an image to a file in JPEG2000 format works ok.

Reproducible: Always

Steps to Reproduce:
Open an image, change it, try to save in JPEG2000 format with 'Save as new version' button -> 'save in format'

Actual Results:  
The message 'Saving a file IMG_9102_v2.jp2k to "/media/magazyn/ Pictures/IMG_9102_v2.jp2k was unsuccessful' appears.
Notice the incorrect extension: jp2k instead of jp2!


Expected Results:  
A new version of the changed image should be saved to file in the JPEG2000 format.

OS: Linux (i686) release 2.6.35-28-generic
Compiler: cc
Comment 1 Marcel Wiesweg 2011-03-20 17:31:55 UTC
Git commit a332ec6a1bb3d4207598f3f59badd5ea0c35a78b by Marcel Wiesweg.
Committed on 20/03/2011 at 17:31.
Pushed by mwiesweg into branch 'master'.

Always use "JP2" for JPEG2000.

In some places, unfortunately including the database, "JP2K"
and even "JP2k" were used. Changing for the future, I hope
there are no problems with having the invalid format strings in the db.

BUG: 268924

M  +3    -1    NEWS     
M  +2    -2    libs/database/imagescanner.cpp     
M  +3    -3    libs/dimg/loaders/jp2kloader.cpp     
M  +1    -1    libs/versionmanager/versionmanager.cpp     
M  +1    -1    utilities/imageeditor/editor/editorwindow.cpp     
M  +1    -1    utilities/searchwindow/searchfields.cpp     
M  +1    -1    utilities/setup/setupversioning.cpp     

http://commits.kde.org/digikam/a332ec6a1bb3d4207598f3f59badd5ea0c35a78b