Always use "JP2" for JPEG2000.

In some places, unfortunately including the database, "JP2K"
and even "JP2k" were used. Changing for the future, I hope
there are no problems with having the invalid format strings in the db.

BUG: 268924